--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ background-color:#000000;
 
 .navbar{
 position: fixed;
-background-color: #316ff6;
+background-color: #575d6c;
 /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
 
 }
